refactor(llm): move model token limits ownership to adapters
ModelTokenLimits in jentic-runtime was a centralised registry of
vendor-specific model names and context window sizes. This design
had three problems:
- obsolescence: new models required changes in a module with no
  provider knowledge
- layer violation: jentic-adapters would need to depend on
  jentic-runtime to call register(), inverting the dependency rules
  defined in ADR-003
- dual source of truth: getAvailableModels() in each provider
  maintained a separate, diverging list

Changes:
- ModelTokenLimits: remove all hardcoded vendor entries; registry
  is now empty at startup and populated by adapters on class load;
  add getLimitOrDefault(String, int) and unregister(String)
- OpenAIProvider, AnthropicProvider, OllamaProvider: introduce
  KNOWN_MODELS (Map<String, Integer>) as single source of truth;
  static block calls KNOWN_MODELS.forEach(ModelTokenLimits::register);
  getAvailableModels() returns List.copyOf(KNOWN_MODELS.keySet())
- Update all model lists to current state (2026-04): GPT-4.1 family
  (1M tokens), o3/o4-mini, Claude 4.x series, Llama 3.x, Qwen 2.5,
  DeepSeek-R1 and others
- ModelTokenLimitsTest: remove vendor-specific assertions; all tests
  use isolated PREFIX names and @AfterEach cleanup; add coverage for
  getLimitOrDefault and unregister
- SimpleTokenEstimatorTest: replace ModelTokenLimits.getLimit("gpt-4")
  usages with an explicit test model registered in @BeforeEach
- Add TokenLimitRegistrationTests nested class to each provider test;
  key assertion: getAvailableModels() ⊆ ModelTokenLimits ensures the
  two sources cannot silently diverge

BREAKING CHANGE: ModelTokenLimits moves from
  dev.jentic.runtime.memory.llm to dev.jentic.core.memory.llm
Callers must update their imports. No deprecation bridge is provided.